# documentor

./: .gitignore  LICENSE.md  OCR_PIPELINE_REPORT.md  README.md  pyproject.toml  pytest.ini  requirements.txt  test.py  test_ocr_files.py
deployment/: README.md
docs/: Dockerfile.dotsocr  README.md  README_vllm.md  compose.yml  entrypoint.sh  env.example
documentor/: README.md  __init__.py
documentor/abstract/: dataset.py  document.py  fragment.py  label_data.py  parser.py  simple_parser.py
documentor/cli/: __init__.py  daemon.py
documentor/config/: __init__.py  daemon_config.json
documentor/core/: __init__.py  document.py  env_config.py  interfaces.py  load_env.py  logging.py
documentor/data/: __init__.py
documentor/docs/: main.py
documentor/loaders/: base.py  logger.py  recursive_loader.py
documentor/parsers/: __init__.py  base.py  config.py  excel_parser.py  extension_mapping.py  extensions.py  text_parser.py
documentor/processing/: __init__.py
documentor/semantic/: pipeline.py  pipline.py
documentor/sheets/: classifier.py  clustering.py  document.py  fragment.py  label_data.py  parser.py
documentor/shemas/: dataset.py  document.py  fragment.py  label_data.py  simple_parser.py
documentor/simple/: document.py  fragment.py
documentor/storage/: __init__.py  document_serializer.py  structured_storage.py
documentor/structuries/: __init__.py  classifier.py  columns.py  dataset.py  document.py  fragment.py  label_data.py  metadata.py  parser.py  simple_parser.py  status.py  structurator.py  structure.py  style.py  type_check.py
documentor/text/: fragment.py
examples/: README.md  search_terms.md  semantic_example.md  table fragmentation.ipynb  table parsing.ipynb  table parsing.md  table_detection.md  table_fragmentation.md  table_parsing.md
experiments/: README.md  linking_prototype_demo.py  semantic_linking_prototype.py
loaders/: base.py  baseloader.py  directoryloader.py  recursive_loader.py
notebooks/: README.md  proc.md  semantic_example.ipynb  sentence_handling.md  string_attributes.ipynb  string_attributes.md  structures.ipynb  structures.md  table_detection.ipynb  table_process.ipynb  table_process.md  to_pres.md
tests/: README.md  conftest.py  recursive_loader_test.py
(+210 files in other folders)
