[tool.poetry]
name = "documentor"
version = "0.1.0"
description = "Library for parsing and semantic data recovery from documents of various formats"
authors = ["angrymuskrat <mlhakov2011@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
openpyxl = "^3.0.10"
typing = "^3.7.4.3"
scikit-learn = "^1.3.2"
numpy = "^1.25.2"
plotly = "^5.17.0"
dataclasses = "^0.6"
natasha = "^1.6.0"
wikipedia2vec = "^2.0.0"
torch = "^2.4.0"
torchvision = "^0.19.0"
matplotlib = "^3.9.1"

[tool.poetry.extras]
jupyter = ["jupytext", "jupyter"]

[tool.poetry.group.dev.dependencies]
jupytext = "^1.16.1"
jupyter = "^1.0.0"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
